--- a/Android/app/src/main/res/layout/activity_tela_cad_usuario.xml
+++ b/Android/app/src/main/res/layout/activity_tela_cad_usuario.xml
@@ -1,119 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TelaCadUsuarioActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/criarUsuario"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/textViewCriarUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="@string/nomeUsuario"
-        android:textSize="15sp"
-        />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/text_criar_usuario"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewNome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="5dp"
+
+        android:text="@string/text_nome"
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/editNome"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/editNome"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/nomeUsuario"
-        android:inputType="text"/>
-    <requestFocus/>
+        android:layout_marginStart="4dp"
+
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textViewSobrenome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="@string/sobrenomeUsuario"
-        android:textSize="15sp"
-        />
+        android:text="@string/text_sobrenome"
+        android:textColor="@color/colorPrimary"
+
+        app:layout_constraintStart_toStartOf="@+id/editNome"
+        app:layout_constraintTop_toBottomOf="@+id/editNome" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/editSobrenome"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/sobrenomeUsuraio"
-        android:inputType="text"/>
+        android:layout_marginStart="4dp"
+
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSobrenome" />
 
     <TextView
+        android:id="@+id/textSenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="@string/emailUsuario"
-        android:textSize="15sp"
-        />
+        android:text="@string/text_senha"
+        android:textColor="@color/colorPrimary"
+
+        app:layout_constraintStart_toStartOf="@+id/editEmail"
+        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/editText3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/emailUsuario"
-        android:inputType="text"/>
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+
+        android:ems="10"
+        android:inputType="textPassword|numberPassword"
+        android:text="@string/edit_senha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textSenha" />
 
     <TextView
+        android:id="@+id/textViewInstituicao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="@string/dataNascimento"
-        android:textSize="15sp" />
+        android:text="@string/text_instituicao"
+        android:textColor="@color/colorPrimary"
+
+        app:layout_constraintStart_toStartOf="@+id/editConfirmaSenha"
+        app:layout_constraintTop_toBottomOf="@+id/editConfirmaSenha" />
 
     <EditText
-        android:id="@+id/dataNascimentoUsuario"
-        android:layout_width="match_parent"
+        android:id="@+id/editText4"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="datetime" />
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/edit_instituicao"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewInstituicao" />
 
     <TextView
+        android:id="@+id/textViewSemestre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="@string/instituicaoUsuaio"
-        android:textSize="15sp" />
+        android:text="@string/text_semestre"
+        android:textColor="@color/colorPrimary"
+
+        app:layout_constraintStart_toStartOf="@+id/editText4"
+        app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <EditText
-        android:id="@+id/instituicaoUsuario"
-        android:layout_width="match_parent"
+        android:id="@+id/editSemestre"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="text" />
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="@string/semestreUsuario"
-        android:textSize="15sp" />
-
-    <EditText
-        android:id="@+id/semestreUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="261dp"
-        android:layout_height="100dp"
-        tools:src="@tools:sample/avatars[2]" />
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/edit_semestre"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSemestre" />
 
     <Button
         android:id="@+id/btnSalvar"
-        android:layout_width="135dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="salvar"
-        android:text="@string/salvarCadUsuario"
-        tools:ignore="OnClick" />
+        android:layout_marginTop="31dp"
 
-</LinearLayout>
+        android:text="@string/btn_salvar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editSemestre" />
+
+    <TextView
+        android:id="@+id/textViewEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txtEmail"
+        android:textColor="@color/colorPrimary"
+
+        app:layout_constraintStart_toStartOf="@+id/editSobrenome"
+        app:layout_constraintTop_toBottomOf="@+id/editSobrenome" />
+
+    <EditText
+        android:id="@+id/editEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/editEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />
+
+    <TextView
+        android:id="@+id/textViewConfimeSenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_confima_senha"
+        android:textColor="@color/colorPrimary"
+
+        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        tools:text="Confima senha" />
+
+    <EditText
+        android:id="@+id/editConfirmaSenha"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+
+        android:ems="10"
+        android:inputType="textPassword|numberPassword"
+        android:text="@string/edit_confirma_senha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewConfimeSenha" />
+
+</android.support.constraint.ConstraintLayout>
