--- a/Android/app/src/main/res/menu/menu_main.xml
+++ b/Android/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
         android:title="@string/item_settings"
         android:orderInCategory="100" app:showAsAction="never"/>
 
-    <item android:id="@+id/sair"
+    <item android:id="@+id/item_sair"
         android:title="@string/item_sair"
         android:orderInCategory="200" app:showAsAction="never"/>
 
