--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#02110F</color>
-    <color name="colorAccent">#00AF97</color>
+    <color name="colorPrimary">#B4045F</color>
+    <color name="colorPrimaryDark">#8A084B</color>
+    <color name="colorAccent">#DF0174</color>
+    <color name="textColorPrimary">#000000</color>
 </resources>
