--- a/Android/app/src/main/res/values/styles.xml
+++ b/Android/app/src/main/res/values/styles.xml
@@ -10,6 +10,27 @@
        <item name="android:windowBackground">@android:color/white</item>
         <item name="android:itemBackground">@android:color/white</item>
         <item name="android:textColor">@android:color/black</item>
+        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+    </style>
+    
+    <style name="botaopadrao" parent="Theme.AppCompat.Light">
+
+        <item name="colorButtonNormal">@color/colorPrimaryBotton</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MyEditTextTheme">
+        <item name="colorControlNormal">@color/colorPrimaryDark</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="android:textColorHint">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="MyTextTheme">
+
+        <item name="colorPrimary">@color/colorPrimary</item>
+
     </style>
 
 </resources>
