--- a/Android/app/src/main/res/layout/activity_tela_inicio.xml
+++ b/Android/app/src/main/res/layout/activity_tela_inicio.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".TelaInicio">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
