--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -1,134 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundo"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Login">
+    android:clipToPadding="true"
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="244dp"
-        android:layout_height="wrap_content"
-        android:layout_x="59dp"
-        android:layout_y="77dp"
-        android:drawableRight="@drawable/plus"
-        android:gravity="center"
-        android:paddingTop="20dp"
-        android:text="@string/study"
-        android:textColor="#8A0868"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        android:typeface="sans"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="46dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtlayout_login"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtlayout_senha"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="MissingConstraints">
+        android:layout_height="match_parent"
+        android:background="@drawable/fundo"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/txtlayout_login"
+        app:layout_constraintTop_toBottomOf="@+id/txtlayout_login"
+        tools:context=".Login">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_login"
-            android:layout_width="353dp"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="244dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_login"
-            android:inputType="text"
-            tools:ignore="MissingConstraints" />
+            android:layout_marginTop="32dp"
+            android:layout_x="59dp"
+            android:layout_y="77dp"
+            android:drawableRight="@drawable/plus"
+            android:gravity="center"
+            android:paddingTop="20dp"
+            android:text="@string/study"
+            android:textColor="#8A0868"
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.485"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtlayout_senha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_senha"
-            android:layout_width="358dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_senha"
-            android:inputType="textPassword"
-            tools:ignore="MissingConstraints" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/btnCadastrar"
-        android:layout_width="109dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginBottom="164dp"
-        android:layout_x="61dp"
-        android:layout_y="414dp"
-        android:onClick="cadastrar"
-        android:text="@string/cadastrar"
-        android:theme="@style/botaopadrao"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/scrollView2" />
-
-    <Button
-        android:id="@+id/btnEntrar"
-        android:layout_width="98dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="164dp"
-        android:layout_x="191dp"
-        android:layout_y="414dp"
-        android:onClick="entrar"
-        android:text="@string/entrar"
-        android:theme="@style/botaopadrao"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="OnClick" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_x="48dp"
-        android:layout_y="340dp"
-        android:onClick="recuperarSenha"
-        android:text="@string/text_esqueci_senha"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="43dp"
-        android:layout_height="657dp"
-        tools:layout_editor_absoluteX="402dp"
-        tools:layout_editor_absoluteY="110dp">
-
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/txtlayout_login"
             android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"
+            android:theme="@style/MyEditTextTheme"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.039"
+            tools:ignore="MissingConstraints">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/et_login"
+                android:layout_width="353dp"
+                android:layout_height="match_parent"
+                android:hint="@string/hint_login"
+                android:inputType="text"
+                tools:ignore="MissingConstraints" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/txtlayout_senha"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:theme="@style/MyEditTextTheme"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtlayout_login"
+            app:layout_constraintVertical_bias="0.025"
+            tools:ignore="MissingConstraints">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/et_senha"
+                android:layout_width="358dp"
+                android:layout_height="match_parent"
+                android:hint="@string/hint_senha"
+                android:inputType="textPassword"
+                tools:ignore="MissingConstraints" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+
+            android:id="@+id/btnCadastrar"
+            android:layout_width="107dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="88dp"
+            android:layout_marginEnd="71dp"
+            android:layout_marginBottom="8dp"
+            android:layout_x="61dp"
+            android:layout_y="414dp"
+            android:onClick="cadastrar"
+            android:text="@string/cadastrar"
+            android:theme="@style/botaopadrao"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnEntrar"
+            app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnEntrar"
+            android:layout_width="96dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="71dp"
+            android:layout_marginTop="88dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="8dp"
+            android:layout_x="191dp"
+            android:layout_y="414dp"
+            android:onClick="entrar"
+            android:text="@string/entrar"
+            android:theme="@style/botaopadrao"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnCadastrar"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_x="48dp"
+            android:layout_y="340dp"
+            android:onClick="recuperarSenha"
+            android:text="@string/text_esqueci_senha"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintStart_toStartOf="@+id/txtlayout_senha"
+            app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
